--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
+    "@types/body-scroll-lock": "^2.6.1",
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "body-scroll-lock": "^3.1.5",
+    "chakra-ui-steps": "file:.yalc/chakra-ui-steps",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.8",
     "react-dom": "^17.0.2",
-    "react-icons": "^3.0.0",
+    "react-icons": "^4.2.0",
+    "react-lorem-ipsum": "^1.4.9",
     "react-scripts": "4.0.3",
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
