--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
   },
+  "homepage": "https://jeanverster.github.io/chakra-ui-steps-site",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "predeploy": "yarn build",
+  "deploy": "gh-pages -d build",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   }
 }
