--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
-  "predeploy": "yarn build",
-  "deploy": "gh-pages -d build",
   "eslintConfig": {
     "extends": "react-app"
   },
