--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "body-scroll-lock": "^3.1.5",
-    "chakra-ui-steps": "file:.yalc/chakra-ui-steps",
+    "chakra-ui-steps": "^1.5.0",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
